hphp/hack/test/typecheck/array_append_map_element.php.like_types.exp
File "array_append_map_element.php", line 5, characters 3-21:
Invalid assignment (Typing[4110])
File "array_append_map_element.php", line 4, characters 27-34:
Expected ~vec<~int> because it is an unenforceable type
File "array_append_map_element.php", line 4, characters 27-34:
But got vec<~?(int | string)>
